--- a/style.css
+++ b/style.css
@@ -34,8 +34,18 @@ img{
     display: flex;
     overflow-x: auto;
     gap:15px;
+    padding: 20px;
+    scroll-behavior: smooth;
+}
+.categoria-video::-webkit-scrollbar{
+    height: 8px;
+}
+.categoria-video::-webkit-scrollbar-thumb{
+    background-color: black;
+    border-radius: 4px;
 }
 .categoria{
     padding: left 20px;
     padding: right 20px;
+    
 }
