--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     background-color: blueviolet;
     color: black;
-    font-display: ;
+    font-display: optional;
     margin:0px;
 }
 h1{
